[project]
name = "logit"
version = "0.1.0"
description = "A concise command-line tool for quickly logging daily tasks and milestones, ideal for personal and professional record-keeping."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click-default-group>=1.2.4",
    "click>=8.1.8",
    "peewee>=3.17.9",
]
